Fix wizard z-index

--- a/src/sass/theme/parts/modules/_form_selector_wizard.scss
+++ b/src/sass/theme/parts/modules/_form_selector_wizard.scss
@@ -40,7 +40,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1040;
+  z-index: 1060;
   width: 100%;
   height: 100%;
   padding-top: 1rem;
